<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#BAF3F3">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/fragment1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="displayFr1"
                android:text="@string/general_symptoms" />


            <Button
                android:id="@+id/fragment2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="displayFr2"
                android:text="@string/head_area" />


            <Button
                android:id="@+id/fragment3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="displayFr3"
                android:text="@string/neck_area" />


            <Button
                android:id="@+id/fragment4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="displayFr4"
                android:text="@string/trunk_area" />

            <Button
                android:id="@+id/fragment5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="displayFr5"
                android:text="@string/abdomen_area" />


            <Button
                android:id="@+id/fragment6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="displayFr6"
                android:text="@string/genital_area" />


            <Button
                android:id="@+id/fragment7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="displayFr7"
                android:text="@string/arms_area" />


            <Button
                android:id="@+id/fragment8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="displayFr8"
                android:text="@string/legs_area" />

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/group"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/horizontalScrollView"
        android:layout_above="@+id/clearAll"
        android:orientation="vertical"
        android:background="#F0D1BE" />


    <Button
        android:id="@+id/nextStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Idući korak" />

    <Button
        android:id="@+id/clearAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nextStep"
        android:text="Poništi sve" />

</RelativeLayout>
